--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Coreix
 		<ul class="slides">
 			<li class="fullscreen-element">
 				<div class="background-image-holder">
-					<img alt="Slide Background" class="background-image" src="{{asset "img/P1010143.JPG"}}">
+					<img alt="Slide Background" class="background-image" src="/img/P1010143.JPG">
 				</div>
 
 				<div class="video-holder gradient-overlay video-wrapper">
@@ -186,7 +186,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_269300465.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_269300465.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">Enterprise</h5>
@@ -206,7 +206,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_219427714.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_219427714.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">Financial Services</h5>
@@ -226,7 +226,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_171416846.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_171416846.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">Government & Public Sector</h5>
@@ -247,7 +247,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_146902187.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_146902187.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">Cloud and ISP</h5>
@@ -268,7 +268,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_181325729.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_181325729.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">Gaming</h5>
@@ -288,7 +288,7 @@ opacity: 0.5;
 					<div class="blog-snippet-1 image-snippet overlay">
 
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/assets/img/home/shutterstock_272222681.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_272222681.jpg">
 						</div>
 
 						<h5 style="font-size: 22px; font-weight: 400; padding-bottom: 210px;" class="text-center">SMB</h5>
