--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
---- layout: default title: Coreix ---
+---
+layout: default
+title: Coreix
+---
 
 <section class="hero-slider large-image">
 	<ul class="slides">
