--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,4 +1,7 @@
---- layout: default title: About Coreix ---
+---
+layout: default
+title: About Coreix
+---
 
 <section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
 	<div class="background-image-holder overlay" style="opacity: 0 !important;">
