--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Coreix
 ---
 
+{% include menu.html %}
+
 <section class="hero-slider large-image">
 	<ul class="slides">
 		<li class="fullscreen-element">
