--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,6 +3,8 @@ layout: default
 title: About Coreix
 ---
 
+{% include menu2.html %}
+
 <section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
 	<div class="background-image-holder overlay" style="opacity: 0 !important;">
 		<img alt="Slide Background" class="background-image" src="img/hero19.jpg">
