--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About Coreix
 ---
 
-{% include menu2.html %}
+{% include menu.html %}
 
 <section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
 	<div class="background-image-holder overlay" style="opacity: 0 !important;">
