--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,21 +4,7 @@ title: About Coreix
 ---
 
 {% include menu.html %}
-
-<section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
-	<div class="background-image-holder overlay" style="opacity: 0 !important;">
-		<img alt="Slide Background" class="background-image" src="img/hero19.jpg">
-	</div>
-
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-sm-7">
-				<h1 class="text-white" style="font-size: 40px;">About Us</h1>
-			</div>
-		</div>
-	</div>
-</section>
+{% include title.html param="About" variable-param=page.variable %}
 
 
 <section class="action-strip-2" style="z-index: 10000; background: none; padding: 0px; background: #ffffff; padding-top: 15px; padding-bottom: 10px;">
