--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,8 +4,7 @@ title: About Coreix
 ---
 
 {% include menu.html %}
-{% include title.html param="About" variable-param=page.variable %}
-
+{% include title.html param="About Us" variable-param=page.variable %}
 
 <section class="action-strip-2" style="z-index: 10000; background: none; padding: 0px; background: #ffffff; padding-top: 15px; padding-bottom: 10px;">
 	<div class="container">
