--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,7 +3,8 @@ layout: default
 title: About Coreix
 ---
 
-{% include title.html param="About Us" variable-param=page.variable %}
+{% include title/block.html param="About Us" variable-param=page.variable %}
+{% include nav/default.html %}
 
 <section class="action-strip-2" style="z-index: 10000; background: none; padding: 0px; background: #ffffff; padding-top: 15px; padding-bottom: 10px;">
 	<div class="container">
