--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,8 +3,9 @@ layout: default
 title: About Coreix
 ---
 
-{% include title/block.html param="About Us" variable-param=page.variable %}
+{% include title/about-us.html %}
 {% include nav/about-us.html %}
+{% include title.html param="About Us" variable-param=page.variable %}
 
 <section class="instagram-1">
     <div class="instafeed" data-user-name="coreixnet">
