--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,8 +4,8 @@ title: About Coreix
 ---
 
 {% include title/about-us.html %}
-{% include nav/about-us.html %}
-{% include title.html param="About Us" variable-param=page.variable %}
+{% include navigation/about-us.html %}
+{% include title/default.html param="About Us" variable-param=page.variable %}
 
 <section class="instagram-1">
     <div class="instafeed" data-user-name="coreixnet">
