--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -3,8 +3,9 @@ layout: default
 title: About Coreix
 ---
 
-{% include title/block.html param="About Us" variable-param=page.variable %}
-{% include nav/about-us.html %}
+{% include title/about-us.html %}
+{% include navigation/about-us.html %}
+{% include title/default.html param="About Us" variable-param=page.variable %}
 
 <section class="large-pad" style="background: #ffffff;">
     <div class="container">
