--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -5,19 +5,7 @@ title: About Coreix
 
 {% include title/about-us.html %}
 {% include navigation/about-us.html %}
-{% include title/default.html param="About Us" variable-param=page.variable %}
-
-<section class="large-pad" style="background: #ffffff;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
-                <p class="super-lead">Coreix brings a commitment to excellence
-                in the provision of datacentre services that is second to
-                none.</p>
-            </div>
-        </div>
-    </div>
-</section>
+{% include title/default.html param="Coreix brings a commitment to excellence in the provision of datacentre services that is second to none." variable-param=page.variable %}
 
 <section class="image-features" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
