--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,7 +5,7 @@ title: About Coreix
 
 {% include title/about-us.html %}
 {% include navigation/about-us.html %}
-{% include title/default.html param="About Us" variable-param=page.variable %}
+{% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
 
 <section class="instagram-1">
     <div class="instafeed" data-user-name="coreixnet">
@@ -18,21 +18,6 @@ title: About Coreix
                 <a href="#">
                 <h2><i class="icon social_instagram"></i> coreixnet</h2><br>
                 <span>Follow us for updates</span></a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="large-pad" style="background: #ffffff;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
-                <p class="super-lead">Coreix specialises in providing high
-                availability hosting services and solutions for small, medium
-                and large enterprise business. Coreix was formed in 2003 to
-                answer the need for a customer-driven managed hosting provider
-                with unparalleled expertise, cutting-edge technology and award
-                winning industry-leading customer service.</p>
             </div>
         </div>
     </div>
