--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -33,8 +33,7 @@ title: About Coreix
     </div>
 </section>
 
-<section class="article-wrapper" style=
-"padding-top: 0px; background: #ffffff;">
+<section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
