--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -5,7 +5,7 @@ title: About Coreix
 
 {% include title/about-us.html %}
 {% include navigation/about-us.html %}
-{% include title/default.html param="Coreix brings a commitment excellence in the provision of datacentre services that is second to none." variable-param=page.variable %}
+{% include title/default.html param="Coreix brings a commitment to excellence in the provision of datacentre services that is second to none." variable-param=page.variable %}
 
 <section class="image-features" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
