--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -3,7 +3,23 @@ layout: default
 title: About Coreix
 ---
 
-{% include title/about-us.html %}
+<section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
+	<div class="background-image-holder overlay" style="opacity: 0 !important;">
+		<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
+	</div>
+
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-sm-7">
+				<h1 class="text-white" style="font-size: 40px;">
+				  About Us
+				</h1>
+			</div>
+		</div>
+	</div>
+</section>
+
 {% include navigation/about-us.html %}
 {% include title/default.html param="Coreix brings a commitment to excellence in the provision of datacentre services that is second to none." variable-param=page.variable %}
 
