--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -15,6 +15,7 @@ title: About Coreix
 				<h1 class="text-white" style="font-size: 40px;">
 				  About Us
 				</h1>
+				<p class="super-lead">Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
 			</div>
 		</div>
 	</div>
