--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -4,7 +4,7 @@ title: About Coreix
 ---
 
 <section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
-	<div class="background-image-holder overlay" style="opacity: 5 !important;">
+	<div class="background-image-holder overlay" style="opacity: 8 !important;">
 		<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
 	</div>
 
@@ -15,7 +15,8 @@ title: About Coreix
 				<h1 class="text-white" style="font-size: 40px;">
 				  About Us
 				</h1>
-				<p class="super-lead">Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
+				<p class="super-lead" style="color: #ffffff; padding-top: 0px; margin-top: 0px;">
+				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
 			</div>
 		</div>
 	</div>
