--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -3,6 +3,31 @@ layout: default
 title: About Coreix
 ---
 
+		<section class="hero-slider large-image">
+				<ul class="slides">
+					<li>
+						<div class="background-image-holder">
+							<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
+						</div>
+					
+						<div class="video-holder gradient-overlay video-wrapper">
+						</div>	
+			
+						<div class="container vertical-align">
+							<div class="row">
+								<div class="col-sm-12 text-center">
+									<h1 class="text-white">About Us</h1>
+									<p class="super-lead text-white">
+				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
+								</div>
+							</div>
+						</div>	
+					</li>
+				
+				</ul>
+			</section>
+
+
 <section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
 	<div class="background-image-holder overlay">
 		<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
