--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -15,7 +15,7 @@ title: About Coreix
 			
 						<div class="container vertical-align">
 							<div class="row">
-								<div class="col-sm-12 text-center">
+								<div class="col-sm-12">
 									<h1 class="text-white">About Us</h1>
 									<p class="super-lead text-white">
 				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
@@ -26,26 +26,6 @@ title: About Coreix
 				
 				</ul>
 			</section>
-
-
-<section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
-	<div class="background-image-holder overlay">
-		<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
-	</div>
-
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-sm-7">
-				<h1 class="text-white" style="font-size: 40px;">
-				  About Us
-				</h1>
-				<p class="super-lead" style="color: #ffffff; padding-top: 0px; margin-top: 0px;">
-				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
-			</div>
-		</div>
-	</div>
-</section>
 
 {% include navigation/about-us.html %}
 {% include title/default.html param="Coreix brings a commitment to excellence in the provision of datacentre services that is second to none." variable-param=page.variable %}
