--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About Coreix
 ---
 
-		<section class="hero-slider large-image">
+		<section class="hero-slider large-image" style="min-height: 100px;">
 				<ul class="slides">
 					<li>
 						<div class="background-image-holder">
