--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -3,9 +3,9 @@ layout: default
 title: About Coreix
 ---
 
-		<section class="hero-slider large-image" style="min-height: 100px;">
+		<section class="hero-slider large-image">
 				<ul class="slides">
-					<li>
+					<li style="height: 400px;">
 						<div class="background-image-holder">
 							<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
 						</div>
