--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -5,7 +5,7 @@ title: About Coreix
 
 		<section class="hero-slider large-image">
 				<ul class="slides">
-					<li style="height: 400px;">
+					<li style="height: 300px;">
 						<div class="background-image-holder">
 							<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
 						</div>
@@ -15,7 +15,7 @@ title: About Coreix
 			
 						<div class="container vertical-align">
 							<div class="row">
-								<div class="col-sm-12">
+								<div class="col-sm-12" style="padding-top: 100px;">
 									<h1 class="text-white">About Us</h1>
 									<p class="super-lead text-white">
 				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
