--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -10,15 +10,13 @@ title: About Coreix
 							<img alt="Slide Background" class="background-image" src="/img/about-us/our-commitments.jpg">
 						</div>
 					
-						<div class="video-holder gradient-overlay video-wrapper">
+						<div class="video-holder  video-wrapper">
 						</div>	
 			
 						<div class="container vertical-align">
 							<div class="row">
 								<div class="col-sm-12" style="padding-top: 100px;">
 									<h1 class="text-white">About Us</h1>
-									<p class="super-lead text-white">
-				Coreix brings a commitment to excellence in the provision of datacentre services that is second to none.</p>
 								</div>
 							</div>
 						</div>	
