--- a/about-us/our-commitments/index.html
+++ b/about-us/our-commitments/index.html
@@ -16,7 +16,7 @@ title: About Coreix
 						<div class="container vertical-align">
 							<div class="row">
 								<div class="col-sm-12" style="padding-top: 100px;">
-									<h1 class="text-white">About Us</h1>
+									<h1 class="text-white">Our Commitments</h1>
 								</div>
 							</div>
 						</div>	
