--- a/about-us/testimonials/index.html
+++ b/about-us/testimonials/index.html
@@ -3,6 +3,27 @@ layout: default
 title: Testimonials
 ---
 
-{% include title/about-us.html %}
+		<section class="hero-slider large-image">
+				<ul class="slides">
+					<li style="height: 300px;">
+						<div class="background-image-holder">
+							<img alt="Slide Background" class="background-image" src="/img/about-us/client-testimonials.jpg">
+						</div>
+					
+						<div class="video-holder  video-wrapper">
+						</div>	
+			
+						<div class="container vertical-align">
+							<div class="row">
+								<div class="col-sm-12" style="padding-top: 100px;">
+									<h1 class="text-white">Testimonials</h1>
+								</div>
+							</div>
+						</div>	
+					</li>
+				
+				</ul>
+			</section>
+			
 {% include navigation/about-us.html %}
 {% include title/default.html param="Testimonials" variable-param=page.variable %}
