--- a/about-us/partner-program/index.html
+++ b/about-us/partner-program/index.html
@@ -3,6 +3,27 @@ layout: default
 title: Partner Program - Coreix
 ---
 
-{% include title/about-us.html %}
+		<section class="hero-slider large-image">
+				<ul class="slides">
+					<li style="height: 300px;">
+						<div class="background-image-holder">
+							<img alt="Slide Background" class="background-image" src="/img/about-us/partner-programme.jpg">
+						</div>
+					
+						<div class="video-holder  video-wrapper">
+						</div>	
+			
+						<div class="container vertical-align">
+							<div class="row">
+								<div class="col-sm-12" style="padding-top: 100px;">
+									<h1 class="text-white">Partner Programme</h1>
+								</div>
+							</div>
+						</div>	
+					</li>
+				
+				</ul>
+			</section>
+			
 {% include navigation/about-us.html %}
 {% include title/default.html param="Coreix operates a number of partner and reseller programs." variable-param=page.variable %}
