--- a/about-us/index.html
+++ b/about-us/index.html
@@ -3,7 +3,28 @@ layout: default
 title: About Coreix
 ---
 
-{% include title/about-us.html %}
+		<section class="hero-slider large-image">
+				<ul class="slides">
+					<li style="height: 300px;">
+						<div class="background-image-holder">
+							<img alt="Slide Background" class="background-image" src="/img/about-us/london.jpg">
+						</div>
+					
+						<div class="video-holder  video-wrapper">
+						</div>	
+			
+						<div class="container vertical-align">
+							<div class="row">
+								<div class="col-sm-12" style="padding-top: 100px;">
+									<h1 class="text-white">About Us</h1>
+								</div>
+							</div>
+						</div>	
+					</li>
+				
+				</ul>
+			</section>
+			
 {% include navigation/about-us.html %}
 {% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
 
