--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,1 +1,93 @@
-hello
+---
+layout: default
+title: Contact Us - Coreix
+---
+
+		<section class="hero-slider large-image">
+				<ul class="slides">
+					<li style="height: 300px;">
+						<div class="background-image-holder">
+							<img alt="Slide Background" class="background-image" src="/img/contact-us/contact-us-image.jpg">
+						</div>
+					
+						<div class="video-holder  video-wrapper">
+						</div>	
+			
+						<div class="container vertical-align">
+							<div class="row">
+								<div class="col-sm-12" style="padding-top: 100px;">
+									<h1 class="text-white">Contact Us</h1>
+								</div>
+							</div>
+						</div>	
+					</li>
+				
+				</ul>
+			</section>
+			
+{% include navigation/about-us.html %}
+{% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
+
+<section class="instagram-1">
+    <div class="instafeed" data-user-name="coreixnet">
+        <ul></ul>
+    </div>
+
+    <div class="container vertical-align">
+        <div class="row" style="padding-top: 50px; background: #ffffff;">
+            <div class="col-sm-12 text-center">
+                <a href="#">
+                <h2><i class="icon social_instagram"></i> coreixnet</h2><br>
+                <span>Follow us for updates</span></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="article-single text-center">
+                    <h4>Who we are</h4>
+
+                    <p>Coreix Limited is a London based managed hosting,
+                    colocation and network services provider which offers
+                    secure, agile, scalable and robust hosting solutions to
+                    clients in varying sectors including enterprise, financial
+                    services, government and public sector as well as
+                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
+
+                    <p>As each of our clients has a different bespoke
+                    requirement, the team at Coreix also offers tailored
+                    hardware and software solutions ranging from single
+                    dedicated servers to managed multi-server clusters, public
+                    and private cloud services, secure cages, private suites,
+                    from its energy efficient carbon neutral tier III
+                    datacentres across London to cater to their needs.</p>
+
+                    <h4>What we do</h4>
+
+                    <p>From our securely operated facilities in London, UK we
+                    are able to provide services ranging from a single
+                    dedicated server to managed multi-server clusters, secure
+                    cages or private suites complimented by 24/7 onsite staff
+                    and premium network bandwidth or point-to-point connections
+                    to the carrier of your choice.</p>
+
+                    <p>With over 30 years of managed dedicated hosting
+                    experience between our management we are in a unique
+                    position to stand out from the crowd. Our company is driven
+                    by our passion and dedication to our customers needs.</p>
+
+                    <p>By offering the most comprehensive hosting solutions in
+                    the market place we are able to offer you a solution that
+                    is individually tailored to your companies needs now and in
+                    the future. Our aggressive pricing and managed services
+                    combine to allow you to take advantage of the economies of
+                    scale regardless of the size of your solution.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
