--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -25,7 +25,7 @@ title: Contact Us - Coreix
 				</ul>
 			</section>
 			
-{% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
+{% include title/default.html param="If you would like to contact the team please get in touch using the contact information below." variable-param=page.variable %}
 
 <section class="contact-2">
     <div class="container">
