--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Coreix
 				<img alt="Slide Background" class="background-image" src="/img/P1010143.JPG">
 			</div>
 
-			<div class="video-holder gradient-overlay video-wrapper">
+			<div class="video-holder video-wrapper">
 			</div>
 
 			<div class="container">
