--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ title: Coreix
 
 	<div class="image-holder col-sm-5 pull-right">
 		<div class="background-image-holder">
-			<img alt="Slide Background" class="background-image" src="http://www.webpt.com/sites/default/files/mantrap.jpg">
+			<img alt="Slide Background" class="background-image" src="/img/colocation/P1010151.JPG">
 		</div>
 	</div>
 
