--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/enterprise">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
@@ -220,7 +220,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/financial-services">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
@@ -240,7 +240,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/government-and-public-sector">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
@@ -261,7 +261,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/cloud-and-isp">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
@@ -282,7 +282,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/gaming">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
@@ -302,7 +302,7 @@ title: Coreix
 						</p>
 						-->
 				<div class="text-center">
-					<a class="text-link" href="#">Find out more<i class="icon arrow_right"></i></a>
+					<a class="text-link" href="/smb">Find out more<i class="icon arrow_right"></i></a>
 				</div>
 			</div>
 		</div>
