--- a/financial-services/index.html
+++ b/financial-services/index.html
@@ -7,42 +7,25 @@ title: About Coreix
 				<ul class="slides">
 					<li style="height: 300px;">
 						<div class="background-image-holder">
-							<img alt="Slide Background" class="background-image" src="/img/about-us/london.jpg">
+							<img alt="Slide Background" class="background-image" src="/img/home/shutterstock_219427714.jpg">
 						</div>
-					
+
 						<div class="video-holder  video-wrapper">
-						</div>	
-			
+						</div>
+
 						<div class="container vertical-align">
 							<div class="row">
 								<div class="col-sm-12" style="padding-top: 100px;">
-									<h1 class="text-white">About Us</h1>
+									<h1 class="text-white">Financial Services</h1>
 								</div>
 							</div>
-						</div>	
+						</div>
 					</li>
-				
+
 				</ul>
 			</section>
-			
-{% include navigation/about-us.html %}
+
 {% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
-
-<section class="instagram-1">
-    <div class="instafeed" data-user-name="coreixnet">
-        <ul></ul>
-    </div>
-
-    <div class="container vertical-align">
-        <div class="row" style="padding-top: 50px; background: #ffffff;">
-            <div class="col-sm-12 text-center">
-                <a href="#">
-                <h2><i class="icon social_instagram"></i> coreixnet</h2><br>
-                <span>Follow us for updates</span></a>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
