--- a/cloud-and-isp/index.html
+++ b/cloud-and-isp/index.html
@@ -25,7 +25,8 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
+{% include title/default.html param="" variable-param=page.variable %}
+{% include title/default.html param="" variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
