--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -25,50 +25,56 @@ title: About Coreix
 				</ul>
 			</section>
 
-{% include title/default.html param="Coreix specialises in providing high availability hosting services and solutions for small, medium and large enterprise business. Coreix was formed in 2003 to answer the need for a customer-driven managed hosting provider with unparalleled expertise, cutting-edge technology and award winning industry-leading customer service." variable-param=page.variable %}
+{% include title/default.html param="Scalable hardware solutions which match your corporate IT objectives" variable-param=page.variable %}
 
 <section class="article-wrapper" style="padding-top: 0px; background: #ffffff;">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
-                    <h4>Who we are</h4>
 
-                    <p>Coreix Limited is a London based managed hosting,
-                    colocation and network services provider which offers
-                    secure, agile, scalable and robust hosting solutions to
-                    clients in varying sectors including enterprise, financial
-                    services, government and public sector as well as
-                    Insurance, wholesale, oil, bitcoin and manufacturing.</p>
+                    <p>At Coreix, we will collaborate with you on your unique corporate IT objectives to ensure that you are using the most resilient enterprise grade hosting solutions which work for your IT strategy and budget.
+											Whether you require a server to host a large scale database or need a fully hosted managed multi-site solution, our experienced team will work with your technical staff to ensure that you have the right infrastructure,
+											redundancy, backup and storage solutions to protect your mission critical data and applications.</p>
 
-                    <p>As each of our clients has a different bespoke
-                    requirement, the team at Coreix also offers tailored
-                    hardware and software solutions ranging from single
-                    dedicated servers to managed multi-server clusters, public
-                    and private cloud services, secure cages, private suites,
-                    from its energy efficient carbon neutral tier III
-                    datacentres across London to cater to their needs.</p>
+										<h4>Scalable and bespoke colocation solutions</h4>
 
-                    <h4>What we do</h4>
+                    <p>Whether you are looking for a quarter rack or a private suite, Coreix enables businesses to be able to scale their requirements across its tier III datacentre portfolio which offers complete N+1 power
+											redundancy and N+N UPS protection along with a diverse range of carriers to ensure that your business does not experience a moment of downtime.</p>
 
-                    <p>From our securely operated facilities in London, UK we
-                    are able to provide services ranging from a single
-                    dedicated server to managed multi-server clusters, secure
-                    cages or private suites complimented by 24/7 onsite staff
-                    and premium network bandwidth or point-to-point connections
-                    to the carrier of your choice.</p>
+                    <h4>Dedicated private cloud solutions</h4>
 
-                    <p>With over 30 years of managed dedicated hosting
-                    experience between our management we are in a unique
-                    position to stand out from the crowd. Our company is driven
-                    by our passion and dedication to our customers needs.</p>
+                    <p>Our private cloud service offers the optimal solution for enterprise organisations looking for managed firewall, backup, storage, network, monitoring and support.
+											We can build a solution which matches your needs. Our team will work with you to ensure that your IT requirements are optimised through best in class support accompanied by a 24x7 support team.</p>
 
-                    <p>By offering the most comprehensive hosting solutions in
-                    the market place we are able to offer you a solution that
-                    is individually tailored to your companies needs now and in
-                    the future. Our aggressive pricing and managed services
-                    combine to allow you to take advantage of the economies of
-                    scale regardless of the size of your solution.</p>
+										<h4>Tailored managed server solutions</h4>
+
+                    <p>As an extension of your corporate IT team, Coreix offers an array of tailored managed server solutions including hardware redundancy, clustering, load balancing, firewall and data replication services
+											to ensure that your business does not experience a moment of downtime.</p>
+
+										<h4>24x7 support for your enterprise IT needs</h4>
+
+										<p>We pride ourselves on having the highest level of customer service with all tickets being answered within five minutes 24 hours a day. Whether you need additional storage, backup, load balancing or additional firewall protection,
+											our team will ensure that your corporate needs are catered for so that you can focus on what you do best while we look after the backend.</p>
+
+										<p>Whether you are looking to host a large database, web server or virtualised platform, each of our servers offers the optimal high performance computing solution which is tailored around your enterprise needs.
+											Our enterprise class servers are designed for businesses who need hardware resilience, great performance and easy upgradability.</p>
+
+										<h4>Agility to scale your infrastructure requirements</h4>
+
+										<p>At Coreix, we offer an agile and flexible service for customers as we believe that you shouldn’t have to fit your requirements around a specific server. As a business, we will work with you to ensure that you receive the most agile solution that works for your business.
+											We tailor our service to ensure that you have the right level of backup storage, redundancy, firewall, processing power and support to ensure continuity of your business operations. </p>
+
+										<p>Every enterprise solution is built around you, be it a single server or a multi-site solution.</p>
+
+										<h4>Redundancy to protect against downtime</h4>
+
+										<p>At Coreix, we have rigorous uptime SLAs in place to ensure that our customers do not experience a moment of downtime. Each of our dedicated servers are offered with dual power supplies, dual uplinks and a 100% SLA guarantee
+											which enables you to be confident that your mission critical applications are being hosted in the most optimal hosting environment in the market.</p>
+
+										<p>At Coreix, we have dedicated account managers and technical staff in place 24 hours a day to ensure that in the unlikely event that your hardware does fail, it will be replaced within two hours.
+											The team will also answer any queries within five minutes and will be able to work on your machine within ten minutes of receiving a ticket, regardless of the time of day or night.  </p>
+
                 </div>
             </div>
         </div>
